--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,13 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 django = "4.2.2"
+psycopg2-binary = "^2.9.10"
+black = "^24.10.0"
+pillow = "^11.1.0"
+ipython = "^8.31.0"
+pytils = "^0.4.1"
+redis = "^5.2.1"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
